# PearAnthropicHack

./: .gitignore  README.md
backend/: db.sqlite3  manage.py  pyproject.toml  requirements.py  requirements.txt
backend/api/: api.py  urls.py  views.py
backend/sidequest/: asgi.py  settings.py  urls.py  wsgi.py
backend/task/: models.py
backend/task/migrations/: 0001_initial.py  0002_task_additional_instructions_task_address_and_more.py
frontend/: next.config.ts  package.json
frontend/app/: globals.css
frontend/app/chat/: layout.tsx  page.tsx
frontend/app/chat/components/: chat-interface.tsx
frontend/app/do/: page.tsx
frontend/app/progress/: layout.tsx  page.tsx
frontend/app/questmaster/: layout.tsx  page.tsx
frontend/app/questmaster/components/: event-details-input.tsx  location-search.d.ts  location-search.tsx  map-config.tsx  map-search.tsx  map.d.ts  map.tsx
frontend/app/questmaster/hooks/: use-mobile.ts
frontend/app/questmaster/lib/: api.ts
frontend/hooks/: use-mobile.ts
frontend/utils/: actions.ts  ai.ts
sidequest/: package.json
