[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.2",
    "dj-rest-auth>=7.0.1",
    "django-allauth>=65.7.0",
    "django-cors-headers>=4.3.0",
    "django>=4.2.0",
    "djangorestframework>=3.16.0",
    "langchain-anthropic>=0.3.12",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
]
